--- a/style.css
+++ b/style.css
@@ -11,6 +11,19 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+.link {
+    text-decoration: none;
+    color: #829985;
+    transition: color 0.5s;
+  }
+  
+  .link:hover {
+    color: #5d7260;
+  }
+.header {
+    background-color: bisque;
+    padding: 10px;
+}
 
 .container {
     max-width: 1440px;
@@ -45,9 +58,47 @@ body {
     color: #829985;
     text-decoration: none;  
     transition: color 0.5s;
-  }
-  .section-item a:hover {
+  
+}
+.section-item a:hover {
     color: #4d2323;
+}
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+ }
+  
+ .section {
+    width: 50%;
+ }
+
+ .section-title {
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #829985;
+  }
+
+  .section-item {
+    position: relative;
+    padding-left: 30px;
+  }
+  
+  .section-item::before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 0px;
+    width: 10px;
+    height: 10px; 
+    border: 1px solid #829985;
+    border-radius: 50%;
+  }
+ @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
   }
 
 code.code{
